# EngineDevelopmentLibrary

./: .gitmodules  CMakeLists.txt  README.md  install.bat
cmake/: edl-config.cmake.in
ext/: CMakeLists.txt
ext/glm/: CMakeLists.txt
ext/jsonh/: CMakeLists.txt
ext/rapidobj/: CMakeLists.txt
ext/stb/: CMakeLists.txt
src/: CMakeLists.txt
src/debug/: CMakeLists.txt  logger.cpp
src/debug/include/edl/: debug.h  logger.h
src/ecs/: BasicComponentTable.cpp  BasicComponentTable.h  CMakeLists.txt  ComponentTable.h  TransformComponentTable.cpp  TransformComponentTable.h  ecs_template.h  ecs_type.h
src/graphics/: CMakeLists.txt  glfw_lib.cpp  shader.cpp
src/graphics/include/edl/: glfw_lib.h  resource.h  shader.h
src/graphics_lib/: CMakeLists.txt  NewShader.cpp  ResourceHandles.cpp  ResourceSystem.cpp  ShaderLoader.cpp  ShaderReflection.cpp  StagingBuffer.cpp  StorageBuffer.cpp  UniformBufferObject.cpp  allocator.cpp  camera.cpp  descriptor_manager.cpp  file_type.cpp  glfw_lib.cpp  graphics_lib.cpp  image_table.cpp  io.cpp  mesh.cpp  model.cpp  pipeline.cpp  shader.cpp  shader_object.cpp  vertex_buffer.cpp
src/graphics_lib/include/edl/: GlobalInfo.h  ResourceHandles.h  ResourceSystem.h  Util.h  bindless_types.h  camera.h  descriptor_manager.h  file_type.h  glfw_defines.h  glfw_lib.h  graphics_lib.h  io.h  mesh.h  model.h  shader.h  shader_object.h  vertex_buffer.h
src/util/: CMakeLists.txt  allocator.cpp  io.cpp
src/util/include/edl/: allocator.h  io.h  util.h
src/vulkan/: CMakeLists.txt  command.cpp  debug.cpp  descriptor.cpp  function.cpp  image.cpp  instance.cpp  memory.cpp  pipeline.cpp  queue.cpp  renderpass.cpp  surface.cpp  swapchain.cpp
src/vulkan/include/edl/vk/: command.h  debug.h  descriptor.h  function.h  image.h  instance.h  memory.h  pipeline.h  queue.h  renderpass.h  surface.h  swapchain.h  vulkan.h
